// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering renders correctly disabled dislike 1`] = `
<button
  className="btn btn-default btn-xs"
  disabled={true}
  onTouchTap={[Function]}
>
  <span
    className="text-center offset-top-small offset-right-small small"
  >
    label
  </span>
  <span
    aria-hidden="true"
    className="glyphicon  glyphicon-thumbs-down"
  />
</button>
`;

exports[`rendering renders correctly disabled like 1`] = `
<button
  className="btn btn-default btn-xs"
  disabled={true}
  onTouchTap={[Function]}
>
  <span
    className="text-center offset-top-small offset-right-small small"
  >
    label
  </span>
  <span
    aria-hidden="true"
    className="glyphicon  glyphicon-thumbs-up"
  />
</button>
`;

exports[`rendering renders correctly dislike 1`] = `
<button
  className="btn btn-default btn-xs"
  disabled={false}
  onTouchTap={[Function]}
>
  <span
    className="text-center offset-top-small offset-right-small small"
  >
    label
  </span>
  <span
    aria-hidden="true"
    className="glyphicon  glyphicon-thumbs-down"
  />
</button>
`;

exports[`rendering renders correctly like 1`] = `
<button
  className="btn btn-default btn-xs"
  disabled={false}
  onTouchTap={[Function]}
>
  <span
    className="text-center offset-top-small offset-right-small small"
  >
    label
  </span>
  <span
    aria-hidden="true"
    className="glyphicon  glyphicon-thumbs-up"
  />
</button>
`;
